# opx-mlnx-sdi-sys

./: .gitreview  Makefile.am  README.md  configure.ac
debian/: changelog  control  copyright
include/: sdi_common.h  sdi_eeprom_utils.h  sdi_media_utils.h  sdi_sysfs_utils.h
src/: sdi_entity.c  sdi_entity_framework.c  sdi_entity_info.c  sdi_entity_reset.c  sdi_fan.c  sdi_led.c  sdi_media.c  sdi_nvram.c  sdi_startup.c  sdi_thermal.c
src/utils/: sdi_eeprom_utils.c  sdi_media_utils.c  sdi_sysfs_utils.c
